Closed Bug 23066 Opened 25 years ago Closed 25 years ago

Image.lowsrc returns undefied.

Categories

(Core :: DOM: Core & HTML, defect, P3)

x86
All
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: desale, Assigned: vidur)

Details

(Whiteboard: [TESTCASE])

Attachments

(1 file)

lowsrc property of image allways return undefined instead of reflecting LOWSRC attribute of IMG. BUILDS: 2000-01-03. STEPS TO REPORDUCE: 1] Please see attached testcase. 2] You'll see button "Access Image lowsrc". Please click this button. OR 1] Please copy HTML code I'm providing. Save it as HTML file. 2] Open this HTML file with above mentioned builds. 3] You'll see button "Access Image lowsrc". Please click this button. EXPECTED RESULTS: In Results textbox we should see "http://bubblegum/ngdriver/suites/dom0/testdata/lowstar.gif" ACTUAL RESULTS: In Results textbox we see "undefined" TESTCASE CODE START: <HTML> <HEAD> </HEAD> <BODY > <script> <!-- function getlowsrc(){ document.inForm.result.value=document.inForm.testimage.lowsrc; } //--> </script> <form name="inForm"> <IMG NAME="testimage" LOWSRC="http://bubblegum/ngdriver/suites/dom0/testdata/lowstar.gif" SRC="http://bubblegum/ngdriver/suites/dom0/testdata/highstar.gif" ALIGN="left" VSPACE="10" HEIGHT="100" WIDTH="100" BORDER="0"> <br><br> <input type="button" value="Access Image lowsrc" onclick="getlowsrc();"> <br> Result: <input type="text" name="result" size="60" value=""> </form> </BODY> </HTML> TESTCASE CODE END:
Whiteboard: [TESTCASE]
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Heh. The DOM Level 1 property is image.lowSrc (note the case difference). Checked in a change on 1/5/2000 so that both work.
Status: RESOLVED → VERIFIED
Verified with 2000-01-11-09.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: